# rpi-sb-provisioner

./: .gitignore  README.adoc  README.md  README.txt  SECURITY.md  nfpm.yaml  requirements.txt  setup.py
app/: config_app.css  config_app.py  layout.css  main.py  systemctl_python.py
ci/: prepare.sh
config/: config.py  config.sh  config_app.css  config_app.helper  validator.py
debian/: .gitignore  bens-provisioner-package.postinst.debhelper  bens-provisioner-package.prerm.debhelper  changelog  conffiles  control  copyright  install  manpages  postinst  postrm  prerm  provisioner.service  rpi-sb-provisioner.lintian-overrides  rpi-sb-provisioner.udev  rules
debian/source/: options
device-provisioner/: provisioner.sh  rpi-sb-provisioner.service
device-triage/: rpi-fde-triage.sh  rpi-fde-triage@.service  rpi-sb-triage.service  rpi-sb-triage.sh  rpi-sb-triage@.service  triage.sh
docs/: api_endpoints.adoc  api_endpoints.md  architecture.adoc  architecture.md  boot-img-generator.adoc  boot-img-generator.md  config_vars.adoc  config_vars.md  debian-package-example.adoc  debian-package-example.md  device-verification-guide.adoc  zero2_troubleshooting.adoc
docs/api/: README.md  audit.adoc  audit.md  configuration.adoc  configuration.md  customisation.adoc  customisation.md  devices.adoc  devices.md  errors.adoc  errors.md  images.adoc  images.md  manufacturing.adoc  manufacturing.md  qrcode.adoc  qrcode.md  services.adoc  services.md  websockets.adoc  websockets.md
docs/device-guidance/: pi4.adoc  pi4.md  pi5.adoc  pi5.md  zero2.adoc  zero2.md
docs/mass-provisioning-guidance/: scaling.adoc  scaling.md
fetch-repo-package-list/: README.md  fetch-repo-package-list  fetch-repo-package-list.service  fetch-repo-package-list.timer  fetch-repo-package-list@.service
host-support/: bootimg-package-config  bootimg_preinst  bootloader.config.default  bootloader.naked  bootloader.secure  config  kernel_modules.list  make-boot-image  manufacturing-data  manufacturing_data  ramdisk_cmdline.txt  ramdisk_internal_config.txt  rpi-sb-provisioner  state-recording  terminal-functions.sh
key-writer/: keywriter.sh  rpi-sb-keywriter.service
make-boot-image/: README.md  make-boot-image-from-kernel  make-boot-image.service
monitor/: config_app.css  config_app.helper  config_app.py  monitor.py  monitor.sh  systemctl_python.py
nginx-example/: NGINX_PAM_AUTH_README.md  README.md  nginx-reverse-proxy.conf  pam.d-nginx  setup-nginx-pam-auth.sh
provisioner-service/: CMakeLists.txt  README.adoc  README.md  rpi-provisioner-ui.service
provisioner-service/cmake/: DebianHardening.cmake  RaspberryPiHardening.cmake
provisioner-service/cmake/curl/: http-no-auth.patch
provisioner-service/dependencies/: libarchive.cmake  xz.cmake  zstd.cmake
provisioner-service/src/: audit.cpp  customisation.cpp  devices.cpp  images.cpp  images.h  keyhelper.cpp  keyregistry.cpp  keyregistry.h  keywrap.cpp  keywrap.h  main.cpp  manufacturing.cpp  options.cpp  scantool.cpp  schema_validator.cpp  services.cpp  utils.cpp  utils.h
provisioner-service/src/include/: audit.h  customisation.h  devices.h  images.h  manufacturing.h  options.h  scantool.h  schema_validator.h  schemas.h  services.h  topic_hub.h
provisioner-service/src/static/css/: common.css
provisioner-service/src/views/: auditlog.csp  auto_refresh_toggle.csp  confirm_action.csp  device_detail.csp  devices.csp  error.csp  firmware.csp  get_script.csp  images.csp  list_scripts.csp  manufacturing.csp  navbar.csp  options.csp  scantool.csp  service_log.csp  services.csp  stylesheet.csp  tile_view.csp  upload_script.csp  zxing_scanner.csp
rpi-package-download/: README.md  rpi-package-download  rpi-package-download@.service
scripts/: postinstall.sh
service/: rpi-fde-bootstrap.sh  rpi-fde-bootstrap@.service  rpi-fde-provisioner.sh  rpi-fde-provisioner@.service  rpi-idp-provisioner.sh  rpi-idp-provisioner@.service  rpi-naked-provisioner.sh  rpi-naked-provisioner@.service  rpi-sb-bootstrap.sh  rpi-sb-bootstrap@.service  rpi-sb-common.sh  rpi-sb-hsm-wrapper-parse.sh  rpi-sb-image-bootimg-generator.sh  rpi-sb-image-bootimg-generator@.service  rpi-sb-pem-sign.sh  rpi-sb-pkcs11-sign.sh  rpi-sb-provisioner.sh  rpi-sb-provisioner@.service  rpi-sb-triage.sh  rpi-sb-triage@.service
target-support/: cryptkey-fetch
